--- a/SD_WebUI_with_google_drive_by_chubaba.ipynb
+++ b/SD_WebUI_with_google_drive_by_chubaba.ipynb
@@ -201,6 +201,7 @@
     {
       "cell_type": "code",
       "source": [
+        "%cd /content/stable-diffusion-webui\n",
         "!COMMANDLINE_ARGS=\"--ngrok 2N0f3RoQGlkj5cwkWEWihYLhqYD_54VsNGDPAELipDdAdVAz6 --skip-torch-cuda-test --ui-settings-file configGoogleColab.json --ngrok-region eu --disable-safe-unpickle --no-half-vae --xformers --reinstall-xformers --enable-insecure-extension-access\" REQS_FILE=\"requirements.txt\" python launch.py"
       ],
       "metadata": {
@@ -221,20 +222,22 @@
     {
       "cell_type": "code",
       "source": [
+        "%cd /content/\n",
+        "\n",
         "# MODELS\n",
         "\n",
         "!wget https://huggingface.co/lysdowie/dalcefoV3Painting/resolve/main/dalcefoV3Painting_dalcefoV3Painting.safetensors    #hugging face veya doğrudan indirme link'ini koy\n",
-        "!cp \"/content/dalcefoV3Painting_dalcefoV3Painting.safetensors\" \"/content/gdrive/MyDrive/My-models\"                      #ilk baştaki yolu /content/indirdiğin dosyyanın adı/ şeklinde yap\n",
+        "!mv \"/content/dalcefoV3Painting_dalcefoV3Painting.safetensors\" \"/content/gdrive/MyDrive/My-models\"                      #ilk baştaki yolu /content/indirdiğin dosyyanın adı/ şeklinde yap\n",
         "\n",
         "# EMBEDINGS\n",
         "\n",
         "!wget https://huggingface.co/datasets/Nerfgun3/yor_forger/resolve/main/yor_forger.pt\n",
-        "!cp \"/content/yor_forger.pt\" \"/content/gdrive/MyDrive/My-embeddings\" \n",
+        "!mv \"/content/yor_forger.pt\" \"/content/gdrive/MyDrive/My-embeddings\" \n",
         "\n",
         "# LORAS\n",
         "\n",
         "!wget https://huggingface.co/datasets/Nerfgun3/tinafate_LoRA/resolve/main/TinaFate.safetensors\n",
-        "!cp \"/content/TinaFate.safetensors\" \"/content/gdrive/MyDrive/My-loras\" "
+        "!mv \"/content/TinaFate.safetensors\" \"/content/gdrive/MyDrive/My-loras\" "
       ],
       "metadata": {
         "id": "M5yufAyqtkUO"
