--- a/SD_WebUI_with_google_drive_by_chubaba.ipynb
+++ b/SD_WebUI_with_google_drive_by_chubaba.ipynb
@@ -125,7 +125,7 @@
         "\n",
         "%cd /content/stable-diffusion-webui\n",
         "!git checkout 3715ece\n",
-        "!COMMANDLINE_ARGS=\"--ngrok senin_anahtarın --disable-safe-unpickle --no-half-vae --xformers --reinstall-xformers --enable-insecure-extension-access\" REQS_FILE=\"requirements.txt\" python launch.py   "
+        "!COMMANDLINE_ARGS=\"--share --disable-safe-unpickle --no-half-vae --xformers --reinstall-xformers --enable-insecure-extension-access\" REQS_FILE=\"requirements.txt\" python launch.py   "
       ],
       "metadata": {
         "id": "dneJMDTutKXF"
@@ -202,7 +202,7 @@
       "cell_type": "code",
       "source": [
         "%cd /content/stable-diffusion-webui\n",
-        "!COMMANDLINE_ARGS=\"--ngrok 2N0f3RoQGlkj5cwkWEWihYLhqYD_54VsNGDPAELipDdAdVAz6 --skip-torch-cuda-test --ui-settings-file configGoogleColab.json --ngrok-region eu --disable-safe-unpickle --no-half-vae --xformers --reinstall-xformers --enable-insecure-extension-access\" REQS_FILE=\"requirements.txt\" python launch.py"
+        "!COMMANDLINE_ARGS=\"--ngrok senin_anahtarın --skip-torch-cuda-test --ui-settings-file configGoogleColab.json --ngrok-region eu --disable-safe-unpickle --no-half-vae --xformers --reinstall-xformers --enable-insecure-extension-access\" REQS_FILE=\"requirements.txt\" python launch.py"
       ],
       "metadata": {
         "id": "PBNnOOzR9pbX"
