--- a/SD_WebUI_with_google_drive_by_chubaba.ipynb
+++ b/SD_WebUI_with_google_drive_by_chubaba.ipynb
@@ -122,7 +122,7 @@
         "!cp \"/content/gdrive/MyDrive/My-models/pastelmix-fp32.safetensors\" \"/content/stable-diffusion-webui/models/Stable-diffusion\"\n",
         "!cp \"/content/gdrive/MyDrive/My-models/pastelmix-fp32.vae.pt\" \"/content/stable-diffusion-webui/models/Stable-diffusion\"\n",
         "\n",
-        "\n",
+        "%pip install torch==1.13.1+cu117 torchvision==0.14.1+cu117 torchtext==0.14.1 torchaudio==0.13.1 torchdata==0.5.1 --extra-index-url https://download.pytorch.org/whl/cu117,
         "%cd /content/stable-diffusion-webui\n",
         "!git checkout 3715ece\n",
         "!COMMANDLINE_ARGS=\"--share --disable-safe-unpickle --no-half-vae --xformers --reinstall-xformers --enable-insecure-extension-access\" REQS_FILE=\"requirements.txt\" python launch.py   "
